[package]
name = "rewrite-saturation"
version = "0.0.0"
authors = ["Adithya Murali <adithya5@illinois.edu>",
           "Alexander Altman <altman3@illinois.edu>",
           "Remy Goldschmidt <regolds2@illinois.edu>"]

[dependencies]
itertools = "^0.7.4"
petgraph = "^0.4.10"
snowflake = "^1.3.0"

[dev-dependencies]
quickcheck = "^0.4.1"
quickcheck_derive = "^0.1.0"
